// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`subscription actions deleteButtonDisabled it should disable the delete button 1`] = `
Object {
  "type": "SUBSCRIPTIONS_DISABLE_DELETE_BUTTON",
}
`;

exports[`subscription actions deleteButtonDisabled it should enable the delete button 1`] = `
Object {
  "type": "SUBSCRIPTIONS_ENABLE_DELETE_BUTTON",
}
`;

exports[`subscription actions deleteModal it should close delete modal 1`] = `
Object {
  "type": "SUBSCRIPTIONS_CLOSE_DELETE_MODAL",
}
`;

exports[`subscription actions deleteModal it should open delete modal 1`] = `
Object {
  "type": "SUBSCRIPTIONS_OPEN_DELETE_MODAL",
}
`;

exports[`subscription actions searchQuery it should update the search-query 1`] = `
Object {
  "payload": "some-query",
  "type": "SUBSCRIPTIONS_UPDATE_SEARCH_QUERY",
}
`;

exports[`subscription actions taskModal it should close task modal 1`] = `
Object {
  "type": "SUBSCRIPTIONS_CLOSE_TASK_MODAL",
}
`;

exports[`subscription actions taskModal it should open task modal 1`] = `
Object {
  "type": "SUBSCRIPTIONS_OPEN_TASK_MODAL",
}
`;
